# data_predict_agent

./: 01_skill_learner_handbook.docx  01_skill_learner_handbook.md  02_trainer_script.docx  02_trainer_script.md  03_newcomer_onboarding.docx  03_newcomer_onboarding.md  04_opencode_skill_usage_guide.docx  04_opencode_skill_usage_guide.md  05_practical_opencode_skill_workshop.docx  67.md  MEMORY.md  agentic_prediction_pipeline.py  d.md  numerical_prediction_pipeline.py  skilljc1.md  sssss.txt  sz.md
agenthub/: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  IMPLEMENTATION.md  PRESTART_CONDITIONS.md  QUICKSTART.md  SERVICE_TEST_REPORT_2026-03-26.md  TEST_REPORT.md  TEST_REPORT_2026-03-27.md  TEST_RESULTS_2026-03-26.md  WEBSDK_EMBEDDING_GUIDE.md  WEB_UI_TEST_REPORT.md  docker-compose.yml  next_doing.md  next_sugg.md
agenthub/backend/: .backend.pid  pyproject.toml  requirements.txt
agenthub/backend/app/: __init__.py
agenthub/backend/app/acl/: __init__.py
agenthub/backend/app/adapters/: __init__.py  base.py  iframe.py  opencode.py  openwork.py  skill_chat.py  websdk.py
agenthub/backend/app/catalog/: __init__.py
agenthub/backend/app/logging/: __init__.py  middleware.py
agenthub/backend/app/store/: redis_store.py
agenthub/backend/config/: resources.generated.json  resources.json  resources.overrides.json  resources.static.json
agenthub/backend/tests/: run_backend_tests.sh  test_api.py  test_preflight_check.py
ollama_proxy/: ollama_proxy_review_and_plan.md  ollama_proxy_v2.py  readme.md
ollama_proxy2/: 1.md
opencode/: dev.md  dev2.md  pro_suggestion.md  (+1 more)
(+75 files in other folders)
