[project]
name = "ai-portal"
version = "1.0.0"
description = "AI Portal - Unified entry point for enterprise AI resources"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "redis>=5.2.0",
    "httpx>=0.28.1",
    "pyjwt>=2.10.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
